--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.0.2 - 6/27/2013
+--------------------------
+
+ * Fixed issue #1: https://github.com/keyo321/jQueryLightWeightMultiSelect/issues/1
+
+
 1.0.1 - 4/19/2013
 --------------------------
 
